#bin_PROGRAMS=sysjs
#sysjs_SOURCES=sysjs.c sysjs.1 xmalloc.c system.h aclocal.m4 getopt.c getopt1.c getopt.h

#  uncomment the following if sysjs requires the math library
#sysjs_LDADD=-lm

#EXTRA_DIST=sysjs.lsm.in sysjs.spec.in sysjs.texinfo

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
#info_TEXINFOS = sysjs.texinfo
#sysjs_TEXINFOS = gpl.texinfo

noinst_HEADERS = include/*.h

#  install the man pages
#man_MANS=sysjs.1

SUBDIRS = src

