dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/js.cpp)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(sysjs, 3.6.8)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

#AC_CHECK_TOOL(JS_CONFIG, js-config, :)
#AC_SUBST(LIBJSXX_LIBS, `js-config --libs`)
#AC_SUBST(LIBJSXX_INC, `js-config --cflags`)


PKG_CHECK_MODULES(MOZJS, mozilla-js >= 1.9.2)
AC_SUBST(MOZJS_CFLAGS)
AC_SUBST(MOZJS_LIBS)

#
# needed for js headers:
#
PKG_CHECK_MODULES(XULU,libxul-unstable >= 1.9.2)
AC_SUBST(XULU_CFLAGS)
AC_SUBST(XULU_LIBS)


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

dnl jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)

